crates/nash-report/tests/can/snapshots/can__impls__explicit_lift_impls_cannot_overlap_the_big_reflexive_rule.snap
---
source: crates/nash-report/tests/can/impls.rs
assertion_line: 184
description: "module Lift exposing (Lift)\ntrait Lift 'small 'big where\n    lift : 'small -> 'big\n    lower : 'big -> 'small\n\n\nmodule Main exposing (..)\nimport Lift exposing (Lift)\ntype Color = Red\nimpl Lift Color Color where\n    lift x = x\n    lower x = x\n\n\nmodule Main exposing (..)\nimport Lift exposing (Lift)\ntype Container 'a = Wrap 'a\nimpl Lift (Container 'a) (Container 'b) where\n    lift x = x\n    lower x = x\n\n\nmodule Main exposing (..)\nimport Lift exposing (Lift)\ntype color = Red\nimpl Lift color color where\n    lift x = x\n    lower x = x\n\n\nmodule Main exposing (..)\nimport Lift exposing (Lift)\ntype alias Alias 'a = 'a\nimpl Lift (Alias 'a) (Alias 'b) where\n    lift x = x\n    lower x = x\n"
info: diagnostic
---
nash::names::reflexive_lift_overlap

  × This impl overlaps the reflexive `Lift` rule:
   ╭─[src/Main.nash:4:11]
 3 │ type Color = Red
 4 │ impl Lift Color Color where
   ·           ─────
 5 │     lift x = x
   ╰────
  help: Every Big type can lift to itself. Remove this impl or choose heads that do not
        overlap that built-in rule.

nash::names::reflexive_lift_overlap

  × This impl overlaps the reflexive `Lift` rule:
   ╭─[src/Main.nash:4:12]
 3 │ type Container 'a = Wrap 'a
 4 │ impl Lift (Container 'a) (Container 'b) where
   ·            ────────────
 5 │     lift x = x
   ╰────
  help: Every Big type can lift to itself. Remove this impl or choose heads that do not
        overlap that built-in rule.

Case 3: accepted
nash::names::reflexive_lift_overlap

  × This impl overlaps the reflexive `Lift` rule:
   ╭─[src/Main.nash:4:12]
 3 │ type alias Alias 'a = 'a
 4 │ impl Lift (Alias 'a) (Alias 'b) where
   ·            ────────
 5 │     lift x = x
   ╰────
  help: Every Big type can lift to itself. Remove this impl or choose heads that do not
        overlap that built-in rule.
