crates/nash-report/tests/can/snapshots/can__impls__global_overlap_between_core_modules.snap
---
source: crates/nash-report/tests/can/impls.rs
assertion_line: 624
description: "module Keep exposing (Keep)\ntrait Keep 'a where\n    keep : 'a -> 'a\n\n\nmodule First exposing (..)\nimport Keep exposing (Keep)\nimpl Keep (list 'a, list 'a) where\n    keep x = x\n\n\nmodule Second exposing (..)\nimport Keep exposing (Keep)\nimpl Keep (list int, list int) where\n    keep x = x\n\n\nmodule Main exposing (..)\n"
info: diagnostic
---
nash::names::overlapping_impls

  × These `Keep.Keep` impls can both match the same trait arguments. The overlapping
  │ head is ((Builtin.list Builtin.int), (Builtin.list Builtin.int)):
   ╭─[src/Main.nash:2:1]
 1 │ module Main exposing (..)
 2 │ 
   · ┬┬
   · │╰── first impl in `First`
   · ╰── overlapping impl in `Second`
   ╰────
  help: Remove one impl or make their heads disjoint; context constraints do not
        disambiguate heads.
