crates/nash-report/tests/can/snapshots/can__impls__impl_cannot_own_an_imported_trait_and_imported_heads.snap
---
source: crates/nash-report/tests/can/impls.rs
assertion_line: 106
description: "module Lift exposing (Lift)\ntrait Lift 'small 'big where\n    lift : 'small -> 'big\n    lower : 'big -> 'small\n\n\nmodule Main exposing (..)\nimport Lift exposing (Lift)\nimport Builtin exposing (List)\nimpl Lift (List 'a) (List 'b) where\n    lift x = x\n    lower x = x\n"
info: diagnostic
---
nash::names::orphan_impl

  × This module cannot define an impl of `Lift.Lift` for Builtin.List, Builtin.List:
   ╭─[src/Main.nash:4:1]
 3 │     import Builtin exposing (List)
 4 │ ╭─▶ impl Lift (List 'a) (List 'b) where
 5 │ │       lift x = x
 6 │ ╰─▶     lower x = x
   ╰────
  help: An impl must be defined in the module that defines its trait or one of its head
        types. Move this impl to one of those modules.
