crates/nash-report/tests/can/snapshots/can__impls__impl_head_kind_mismatch.snap
---
source: crates/nash-report/tests/can/impls.rs
assertion_line: 1059
description: "module Main exposing (..)\n\ntype Color = Red\ntrait Functor 'f where\n    map : ('a -> 'b) -> 'f 'a -> 'f 'b\n\nimpl Functor Color where\n    map f xs = xs\n"
info: diagnostic
---
nash::names::kind_mismatch

  × Kind mismatch in head 1 of impl `Main.Functor`.
   ╭─[src/Main.nash:7:14]
 6 │ 
 7 │ impl Functor Color where
   ·              ─────
 8 │     map f xs = xs
   ╰────
  help: Expected kind `Type -> Type`, found `Type`.
